@@ -39,7 +39,10 @@ SKIP: {
 
     my $promise = ClientTest::run($promiser, $port)->then( sub { print "big resolve\n" }, sub { $@ = shift; warn } );
 
-    isa_ok( $promise, 'Mojo::Promise', 'promise object' );
+  SKIP: {
+        skip 'Using Promise::XS', 1 if $promise->isa('Promise::XS::Promise');
+        isa_ok( $promise, 'Mojo::Promise', 'promise object' );
+    }
 
     my $pr2 = $promise->finally( sub { Mojo::IOLoop->stop() } );
 
