@@ -1,7 +1,8 @@
 Revision history for Perl module Net::Curl::Promiser
 
 0.07
-- Fix race condition and improve diagnostics in tests.
+- Fix AnyEvent (broken in 0.06).
+- Make tests run with Promise::XS.
 
 0.06 Fri 31 Jan 2020
 - Add experimental Promise::XS support.
